src/main/gen/org/harelang/parser/HareParser.java
// This is a generated file. Not intended for manual editing.
package org.harelang.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.harelang.parser.psi.HareTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class HareParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return translation_unit(b, l + 1);
  }

  /* ********************************************************** */
  // multiplicative_expression (additive_operator multiplicative_expression)*
  static boolean additive_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_expression")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = multiplicative_expression(b, l + 1);
    r = r && additive_expression_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (additive_operator multiplicative_expression)*
  private static boolean additive_expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_expression_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!additive_expression_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "additive_expression_1", c)) break;
    }
    return true;
  }

  // additive_operator multiplicative_expression
  private static boolean additive_expression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_expression_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = additive_operator(b, l + 1);
    r = r && multiplicative_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ADDS | SUBSTRACTS
  static boolean additive_operator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_operator")) return false;
    if (!nextTokenIs(b, "", ADDS, SUBSTRACTS)) return false;
    boolean r;
    r = consumeToken(b, ADDS);
    if (!r) r = consumeToken(b, SUBSTRACTS);
    return r;
  }

  /* ********************************************************** */
  // identifier_path
  public static boolean alias_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alias_type")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = identifier_path(b, l + 1);
    exit_section_(b, m, ALIAS_TYPE, r);
    return r;
  }

  /* ********************************************************** */
  // ALLOC_KW LP (expression COMMA expression | expression DOTDOTDOT | expression) RP | FREE_KW LP expression RP
  public static boolean alloc_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alloc_expression")) return false;
    if (!nextTokenIs(b, "<alloc expression>", ALLOC_KW, FREE_KW)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ALLOC_EXPRESSION, "<alloc expression>");
    r = alloc_expression_0(b, l + 1);
    if (!r) r = alloc_expression_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ALLOC_KW LP (expression COMMA expression | expression DOTDOTDOT | expression) RP
  private static boolean alloc_expression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alloc_expression_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ALLOC_KW, LP);
    r = r && alloc_expression_0_2(b, l + 1);
    r = r && consumeToken(b, RP);
    exit_section_(b, m, null, r);
    return r;
  }

  // expression COMMA expression | expression DOTDOTDOT | expression
  private static boolean alloc_expression_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alloc_expression_0_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = alloc_expression_0_2_0(b, l + 1);
    if (!r) r = alloc_expression_0_2_1(b, l + 1);
    if (!r) r = expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // expression COMMA expression
  private static boolean alloc_expression_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alloc_expression_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression(b, l + 1);
    r = r && consumeToken(b, COMMA);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // expression DOTDOTDOT
  private static boolean alloc_expression_0_2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alloc_expression_0_2_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression(b, l + 1);
    r = r && consumeToken(b, DOTDOTDOT);
    exit_section_(b, m, null, r);
    return r;
  }

  // FREE_KW LP expression RP
  private static boolean alloc_expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alloc_expression_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, FREE_KW, LP);
    r = r && expression(b, l + 1);
    r = r && consumeToken(b, RP);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // shift_expression (AND shift_expression)*
  static boolean and_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_expression")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = shift_expression(b, l + 1);
    r = r && and_expression_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (AND shift_expression)*
  private static boolean and_expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_expression_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!and_expression_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "and_expression_1", c)) break;
    }
    return true;
  }

  // AND shift_expression
  private static boolean and_expression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_expression_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AND);
    r = r && shift_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // STATIC_KW? APPEND_KW LP expression COMMA (expression COMMA expression | expression DOTDOTDOT | expression) RP
  public static boolean append_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "append_expression")) return false;
    if (!nextTokenIs(b, "<append expression>", APPEND_KW, STATIC_KW)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, APPEND_EXPRESSION, "<append expression>");
    r = append_expression_0(b, l + 1);
    r = r && consumeTokens(b, 0, APPEND_KW, LP);
    r = r && expression(b, l + 1);
    r = r && consumeToken(b, COMMA);
    r = r && append_expression_5(b, l + 1);
    r = r && consumeToken(b, RP);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // STATIC_KW?
  private static boolean append_expression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "append_expression_0")) return false;
    consumeToken(b, STATIC_KW);
    return true;
  }

  // expression COMMA expression | expression DOTDOTDOT | expression
  private static boolean append_expression_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "append_expression_5")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = append_expression_5_0(b, l + 1);
    if (!r) r = append_expression_5_1(b, l + 1);
    if (!r) r = expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // expression COMMA expression
  private static boolean append_expression_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "append_expression_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression(b, l + 1);
    r = r && consumeToken(b, COMMA);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // expression DOTDOTDOT
  private static boolean append_expression_5_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "append_expression_5_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression(b, l + 1);
    r = r && consumeToken(b, DOTDOTDOT);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // expression (COMMA expression)* DOTDOTDOT? COMMA?
  public static boolean argument_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_list")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENT_LIST, "<argument list>");
    r = expression(b, l + 1);
    r = r && argument_list_1(b, l + 1);
    r = r && argument_list_2(b, l + 1);
    r = r && argument_list_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (COMMA expression)*
  private static boolean argument_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_list_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!argument_list_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "argument_list_1", c)) break;
    }
    return true;
  }

  // COMMA expression
  private static boolean argument_list_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_list_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // DOTDOTDOT?
  private static boolean argument_list_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_list_2")) return false;
    consumeToken(b, DOTDOTDOT);
    return true;
  }

  // COMMA?
  private static boolean argument_list_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_list_3")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // LB array_members? RB
  public static boolean array_literal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal")) return false;
    if (!nextTokenIs(b, LB)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LB);
    r = r && array_literal_1(b, l + 1);
    r = r && consumeToken(b, RB);
    exit_section_(b, m, ARRAY_LITERAL, r);
    return r;
  }

  // array_members?
  private static boolean array_literal_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal_1")) return false;
    array_members(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // expression (COMMA expression)* DOTDOTDOT? COMMA?
  public static boolean array_members(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_members")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARRAY_MEMBERS, "<array members>");
    r = expression(b, l + 1);
    r = r && array_members_1(b, l + 1);
    r = r && array_members_2(b, l + 1);
    r = r && array_members_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (COMMA expression)*
  private static boolean array_members_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_members_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!array_members_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "array_members_1", c)) break;
    }
    return true;
  }

  // COMMA expression
  private static boolean array_members_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_members_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // DOTDOTDOT?
  private static boolean array_members_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_members_2")) return false;
    consumeToken(b, DOTDOTDOT);
    return true;
  }

  // COMMA?
  private static boolean array_members_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_members_3")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // STATIC_KW? ASSERT_KW LP (expression COMMA string_const | expression) RP | STATIC_KW? ABORT_KW LP string_const? RP
  public static boolean assertion_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assertion_expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSERTION_EXPRESSION, "<assertion expression>");
    r = assertion_expression_0(b, l + 1);
    if (!r) r = assertion_expression_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // STATIC_KW? ASSERT_KW LP (expression COMMA string_const | expression) RP
  private static boolean assertion_expression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assertion_expression_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = assertion_expression_0_0(b, l + 1);
    r = r && consumeTokens(b, 0, ASSERT_KW, LP);
    r = r && assertion_expression_0_3(b, l + 1);
    r = r && consumeToken(b, RP);
    exit_section_(b, m, null, r);
    return r;
  }

  // STATIC_KW?
  private static boolean assertion_expression_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assertion_expression_0_0")) return false;
    consumeToken(b, STATIC_KW);
    return true;
  }

  // expression COMMA string_const | expression
  private static boolean assertion_expression_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assertion_expression_0_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = assertion_expression_0_3_0(b, l + 1);
    if (!r) r = expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // expression COMMA string_const
  private static boolean assertion_expression_0_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assertion_expression_0_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression(b, l + 1);
    r = r && consumeToken(b, COMMA);
    r = r && string_const(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // STATIC_KW? ABORT_KW LP string_const? RP
  private static boolean assertion_expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assertion_expression_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = assertion_expression_1_0(b, l + 1);
    r = r && consumeTokens(b, 0, ABORT_KW, LP);
    r = r && assertion_expression_1_3(b, l + 1);
    r = r && consumeToken(b, RP);
    exit_section_(b, m, null, r);
    return r;
  }

  // STATIC_KW?
  private static boolean assertion_expression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assertion_expression_1_0")) return false;
    consumeToken(b, STATIC_KW);
    return true;
  }

  // string_const?
  private static boolean assertion_expression_1_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assertion_expression_1_3")) return false;
    string_const(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // object_selector assignment_op expression | MULTIPLIES unary_expression assignment_op expression | slicing_expression ASSIGN expression
  public static boolean assignment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT, "<assignment>");
    r = assignment_0(b, l + 1);
    if (!r) r = assignment_1(b, l + 1);
    if (!r) r = assignment_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // object_selector assignment_op expression
  private static boolean assignment_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = object_selector(b, l + 1);
    r = r && assignment_op(b, l + 1);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // MULTIPLIES unary_expression assignment_op expression
  private static boolean assignment_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, MULTIPLIES);
    r = r && unary_expression(b, l + 1);
    r = r && assignment_op(b, l + 1);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // slicing_expression ASSIGN expression
  private static boolean assignment_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = slicing_expression(b, l + 1);
    r = r && consumeToken(b, ASSIGN);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ASSIGN | PLUS_ASSIGN | MINUS_ASSIGN | MULTIPLIES_ASSIGN | DIVIDES_ASSIGN |
  // MODULUS_ASSIGN | AND_ASSIGN | OR_ASSIGN | XOR_ASSIGN | LEFT_SHIFT_ASSIGN | RIGHT_SHIFT_ASSIGN | LOGICAL_AND_ASSIGN |
  // LOGICAL_OR_ASSIGN | LOGICAL_XOR_ASSIGN
  public static boolean assignment_op(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_op")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT_OP, "<assignment op>");
    r = consumeToken(b, ASSIGN);
    if (!r) r = consumeToken(b, PLUS_ASSIGN);
    if (!r) r = consumeToken(b, MINUS_ASSIGN);
    if (!r) r = consumeToken(b, MULTIPLIES_ASSIGN);
    if (!r) r = consumeToken(b, DIVIDES_ASSIGN);
    if (!r) r = consumeToken(b, MODULUS_ASSIGN);
    if (!r) r = consumeToken(b, AND_ASSIGN);
    if (!r) r = consumeToken(b, OR_ASSIGN);
    if (!r) r = consumeToken(b, XOR_ASSIGN);
    if (!r) r = consumeToken(b, LEFT_SHIFT_ASSIGN);
    if (!r) r = consumeToken(b, RIGHT_SHIFT_ASSIGN);
    if (!r) r = consumeToken(b, LOGICAL_AND_ASSIGN);
    if (!r) r = consumeToken(b, LOGICAL_OR_ASSIGN);
    if (!r) r = consumeToken(b, LOGICAL_XOR_ASSIGN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER (COLON type)? ASSIGN expression | LP IDENTIFIER (COMMA IDENTIFIER)+ RP ASSIGN expression
  public static boolean binding(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binding")) return false;
    if (!nextTokenIs(b, "<binding>", IDENTIFIER, LP)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINDING, "<binding>");
    r = binding_0(b, l + 1);
    if (!r) r = binding_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // IDENTIFIER (COLON type)? ASSIGN expression
  private static boolean binding_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binding_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    r = r && binding_0_1(b, l + 1);
    r = r && consumeToken(b, ASSIGN);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COLON type)?
  private static boolean binding_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binding_0_1")) return false;
    binding_0_1_0(b, l + 1);
    return true;
  }

  // COLON type
  private static boolean binding_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binding_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON);
    r = r && type(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // LP IDENTIFIER (COMMA IDENTIFIER)+ RP ASSIGN expression
  private static boolean binding_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binding_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, LP, IDENTIFIER);
    r = r && binding_1_2(b, l + 1);
    r = r && consumeTokens(b, 0, RP, ASSIGN);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA IDENTIFIER)+
  private static boolean binding_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binding_1_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = binding_1_2_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!binding_1_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "binding_1_2", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMA IDENTIFIER
  private static boolean binding_1_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binding_1_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, COMMA, IDENTIFIER);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // let_bindings | const_bindings
  public static boolean binding_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binding_list")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINDING_LIST, "<binding list>");
    r = let_bindings(b, l + 1);
    if (!r) r = const_bindings(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // binding (COMMA binding)*
  public static boolean bindings(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bindings")) return false;
    if (!nextTokenIs(b, "<bindings>", IDENTIFIER, LP)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINDINGS, "<bindings>");
    r = binding(b, l + 1);
    r = r && bindings_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (COMMA binding)*
  private static boolean bindings_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bindings_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!bindings_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "bindings_1", c)) break;
    }
    return true;
  }

  // COMMA binding
  private static boolean bindings_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bindings_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && binding(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // variadic_expression |
  //                                                            slice_mutation_expression |
  //                                                            measurement_expression |
  //                                                            defer_expression |
  //                                                            assertion_expression |
  //                                                            alloc_expression | postfix_expression
  static boolean buildin_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buildin_expression")) return false;
    boolean r;
    r = variadic_expression(b, l + 1);
    if (!r) r = slice_mutation_expression(b, l + 1);
    if (!r) r = measurement_expression(b, l + 1);
    if (!r) r = defer_expression(b, l + 1);
    if (!r) r = assertion_expression(b, l + 1);
    if (!r) r = alloc_expression(b, l + 1);
    if (!r) r = postfix_expression(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // LP argument_list? RP
  public static boolean call_op(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_op")) return false;
    if (!nextTokenIs(b, LP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LP);
    r = r && call_op_1(b, l + 1);
    r = r && consumeToken(b, RP);
    exit_section_(b, m, CALL_OP, r);
    return r;
  }

  // argument_list?
  private static boolean call_op_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_op_1")) return false;
    argument_list(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // expression (COMMA expression)*
  public static boolean case_options(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_options")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CASE_OPTIONS, "<case options>");
    r = expression(b, l + 1);
    r = r && case_options_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (COMMA expression)*
  private static boolean case_options_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_options_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!case_options_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "case_options_1", c)) break;
    }
    return true;
  }

  // COMMA expression
  private static boolean case_options_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_options_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // unary_expression (COLON type | AS_KW type | IS_KW type)*
  static boolean cast_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cast_expression")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = unary_expression(b, l + 1);
    r = r && cast_expression_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COLON type | AS_KW type | IS_KW type)*
  private static boolean cast_expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cast_expression_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!cast_expression_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "cast_expression_1", c)) break;
    }
    return true;
  }

  // COLON type | AS_KW type | IS_KW type
  private static boolean cast_expression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cast_expression_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = cast_expression_1_0_0(b, l + 1);
    if (!r) r = cast_expression_1_0_1(b, l + 1);
    if (!r) r = cast_expression_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // COLON type
  private static boolean cast_expression_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cast_expression_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON);
    r = r && type(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
